--- a/my_submission_A.ipynb
+++ b/my_submission_A.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +82,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "\n",
     "from sklearn.linear_model import Ridge, Lasso, LinearRegression\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
        "((1888, 22), (762, 21))"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +172,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +214,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +486,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +523,7 @@
        "Name: times_of_day, dtype: int64"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,6 +540,185 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>VIF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sender</td>\n",
+       "      <td>3.382995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>subject_len</td>\n",
+       "      <td>11.648248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>body_len</td>\n",
+       "      <td>9.629524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mean_paragraph_len</td>\n",
+       "      <td>3.121267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>day_of_week</td>\n",
+       "      <td>7.210303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>is_weekend</td>\n",
+       "      <td>2.622069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>category</td>\n",
+       "      <td>5.216433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>product</td>\n",
+       "      <td>3.094090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>no_of_CTA</td>\n",
+       "      <td>2.807581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>mean_CTA_len</td>\n",
+       "      <td>7.808439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>is_image</td>\n",
+       "      <td>2.063704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>is_personalised</td>\n",
+       "      <td>1.240587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>is_quote</td>\n",
+       "      <td>1.761884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>is_timer</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>is_emoticons</td>\n",
+       "      <td>1.170482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>is_discount</td>\n",
+       "      <td>1.120611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>is_price</td>\n",
+       "      <td>1.021523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>is_urgency</td>\n",
+       "      <td>1.256181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>target_audience</td>\n",
+       "      <td>11.035456</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               feature        VIF\n",
+       "0               sender   3.382995\n",
+       "1          subject_len  11.648248\n",
+       "2             body_len   9.629524\n",
+       "3   mean_paragraph_len   3.121267\n",
+       "4          day_of_week   7.210303\n",
+       "5           is_weekend   2.622069\n",
+       "6             category   5.216433\n",
+       "7              product   3.094090\n",
+       "8            no_of_CTA   2.807581\n",
+       "9         mean_CTA_len   7.808439\n",
+       "10            is_image   2.063704\n",
+       "11     is_personalised   1.240587\n",
+       "12            is_quote   1.761884\n",
+       "13            is_timer        NaN\n",
+       "14        is_emoticons   1.170482\n",
+       "15         is_discount   1.120611\n",
+       "16            is_price   1.021523\n",
+       "17          is_urgency   1.256181\n",
+       "18     target_audience  11.035456"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Detecting Multicollinearity with VIF\n",
+    "X = train.drop(['times_of_day','campaign_id','click_rate'],axis=1)\n",
+    "# VIF dataframe\n",
+    "vif_data = pd.DataFrame()\n",
+    "vif_data[\"feature\"] = X.columns\n",
+    "# calculating VIF for each feature\n",
+    "vif_data[\"VIF\"] = [variance_inflation_factor(X.values, i)\n",
+    "                          for i in range(len(X.columns))]\n",
+    "vif_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* __As we can see, features like subject_len, body_len, mean_CTA_len, target_audience have very high values of VIF, indicating that these variables are highly correlated. Hence, considering these features together leads to a model with high multicollinearity.__\n",
+    "\n",
+    "* __Tree based models like RandomForestRegressor, XGBoostRegressor are immune to multicollinearity.__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -547,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
