XGboost parameter tuning with GridSearch

--- a/my_submission_A.ipynb
+++ b/my_submission_A.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,18 +776,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Seperate Valid Features and Target\n",
-    "X= train.drop(columns = ['campaign_id','click_rate'], axis=1)\n",
+    "X= train.drop(columns = ['campaign_id','click_rate','is_timer', 'is_personalised', 'is_discount'], axis=1)\n",
     "y= train['click_rate']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -836,12 +836,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Linear Regression</td>\n",
-       "      <td>0.122130</td>\n",
+       "      <td>0.124127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Ridge Regression</td>\n",
-       "      <td>0.122187</td>\n",
+       "      <td>0.124132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -856,17 +856,17 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree Regressor</td>\n",
-       "      <td>0.042538</td>\n",
+       "      <td>0.001897</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.448423</td>\n",
+       "      <td>0.468798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>XGBoost</td>\n",
-       "      <td>0.561474</td>\n",
+       "      <td>0.578963</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -874,16 +874,16 @@
       ],
       "text/plain": [
        "                     Model  R2_score\n",
-       "0        Linear Regression  0.122130\n",
-       "1         Ridge Regression  0.122187\n",
+       "0        Linear Regression  0.124127\n",
+       "1         Ridge Regression  0.124132\n",
        "2         Lasso Regression  0.060330\n",
        "3    K Neighbors Regressor  0.249348\n",
-       "4  Decision Tree Regressor  0.042538\n",
-       "5  Random Forest Regressor  0.448423\n",
-       "6                  XGBoost  0.561474"
+       "4  Decision Tree Regressor  0.001897\n",
+       "5  Random Forest Regressor  0.468798\n",
+       "6                  XGBoost  0.578963"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
     "    model = name\n",
     "    model.fit(X_train,y_train)\n",
     "    y_pred = model.predict(X_valid)\n",
-    "    r2= metrics.r2_score(y_valid,y_pred)\n",
+    "    r2= r2_score(y_valid,y_pred)\n",
     "    r2_list.append(r2)\n",
     "evaluation = pd.DataFrame({'Model': names,\n",
     "                           'R2_score': r2_list})\n",
@@ -917,31 +917,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 72 candidates, totalling 360 fits\n",
+      "Best parameters: {'colsample_bytree': 0.3, 'learning_rate': 0.05, 'max_depth': 20, 'min_child_weight': 0, 'n_estimators': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Performing Grid Search to find the best parameters for XGBoost\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "params = { 'max_depth': [20, 25, 30], \n",
+    "           'learning_rate': [0.05, 0.1],\n",
+    "           'n_estimators': [50, 100, 150],\n",
+    "           'colsample_bytree': [0.2, 0.3],\n",
+    "           'min_child_weight': [0, 1]}\n",
+    "xgbr = XGBRegressor(seed = 20)\n",
+    "clf = GridSearchCV(estimator=xgbr, \n",
+    "                   param_grid=params,\n",
+    "                   scoring='r2', \n",
+    "                   verbose=1)\n",
+    "clf.fit(X, y)\n",
+    "print(\"Best parameters:\", clf.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "XGBRegressor(base_score=0.5, booster='gbtree', callbacks=None,\n",
-       "             colsample_bylevel=1, colsample_bynode=1, colsample_bytree=1,\n",
+       "             colsample_bylevel=1, colsample_bynode=1, colsample_bytree=0.3,\n",
        "             early_stopping_rounds=None, enable_categorical=False,\n",
        "             eval_metric=None, gamma=0, gpu_id=-1, grow_policy='depthwise',\n",
        "             importance_type=None, interaction_constraints='',\n",
-       "             learning_rate=0.300000012, max_bin=256, max_cat_to_onehot=4,\n",
-       "             max_delta_step=0, max_depth=6, max_leaves=0, min_child_weight=1,\n",
+       "             learning_rate=0.05, max_bin=256, max_cat_to_onehot=4,\n",
+       "             max_delta_step=0, max_depth=20, max_leaves=0, min_child_weight=0,\n",
        "             missing=nan, monotone_constraints='()', n_estimators=100, n_jobs=0,\n",
-       "             num_parallel_tree=1, predictor='auto', random_state=0, reg_alpha=0,\n",
-       "             reg_lambda=1, ...)"
+       "             num_parallel_tree=1, predictor='auto', random_state=20,\n",
+       "             reg_alpha=0, reg_lambda=1, ...)"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_model = XGBRegressor(n_estimators=100)\n",
+    "my_model = XGBRegressor(n_estimators=100, max_depth=20, learning_rate=0.05, colsample_bytree=0.3, min_child_weight=0, seed=20)\n",
     "my_model.fit(X_train, y_train, \n",
     "             early_stopping_rounds=5, \n",
     "             eval_set=[(X_valid, y_valid)],\n",
@@ -950,16 +981,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5646140910956818"
+       "0.500449233840567"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,25 +1010,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "XGBRegressor(base_score=0.5, booster='gbtree', callbacks=None,\n",
-       "             colsample_bylevel=1, colsample_bynode=1, colsample_bytree=1,\n",
+       "             colsample_bylevel=1, colsample_bynode=1, colsample_bytree=0.3,\n",
        "             early_stopping_rounds=None, enable_categorical=False,\n",
        "             eval_metric=None, gamma=0, gpu_id=-1, grow_policy='depthwise',\n",
        "             importance_type=None, interaction_constraints='',\n",
-       "             learning_rate=0.300000012, max_bin=256, max_cat_to_onehot=4,\n",
-       "             max_delta_step=0, max_depth=6, max_leaves=0, min_child_weight=1,\n",
+       "             learning_rate=0.05, max_bin=256, max_cat_to_onehot=4,\n",
+       "             max_delta_step=0, max_depth=20, max_leaves=0, min_child_weight=0,\n",
        "             missing=nan, monotone_constraints='()', n_estimators=100, n_jobs=0,\n",
-       "             num_parallel_tree=1, predictor='auto', random_state=0, reg_alpha=0,\n",
-       "             reg_lambda=1, ...)"
+       "             num_parallel_tree=1, predictor='auto', random_state=20,\n",
+       "             reg_alpha=0, reg_lambda=1, ...)"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,12 +1046,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "campaign_id = test[\"campaign_id\"]\n",
-    "test = test.drop(columns = ['campaign_id'], axis=1)\n",
+    "test = test.drop(columns = ['campaign_id','is_timer', 'is_personalised', 'is_discount'], axis=1)\n",
     "final_predictions = my_model.predict(test)\n",
     "final_predictions = pd.DataFrame(final_predictions, columns=['click_rate'])\n",
     "submission = pd.concat([campaign_id, final_predictions], axis=1)\n",
